Added REM.js - Relative to font-size of the root element New popovers

--- a/base-site/index.html
+++ b/base-site/index.html
@@ -156,15 +156,16 @@
                                     </li>
                                     <li>js
                                         <ul>
-                                            <li>bootstrap.min.css</li>
+                                            <li>bootstrap.min.js</li>
                                         </ul>
                                     </li>
                                 </ul>
                             </li>
-                            <li>html5
+                            <li><span data-trigger="hover" data-toggle="popover" title="HTML5 Shiv" data-content="Polyfill para funcionalidades de HTML lte IE8">html5</span>
                                 <ul>
-                                    <li>html5shiv.min.js</li>
-                                    <li>respond.min.js</li>
+                                    <li><span data-trigger="hover" data-toggle="popover" title="HTML5 Shiv" data-content="Polyfill para tags HTML5">html5shiv.min.js</span></li>
+                                    <li><span data-trigger="hover" data-toggle="popover" title="HTML5 Shiv" data-content="Polyfill para media queries">respond.min.js</span></li>
+                                    <li><span data-trigger="hover" data-toggle="popover" title="HTML5 Shiv" data-content="Polyfill para REM (relativo ao tamanho da fonte do elemento root - body)">rem.min.js</span></li>
                                 </ul>
                             </li>
                             <li><span data-trigger="hover" data-toggle="popover" title="jQuery" data-content="Biblioteca jQuery">jquery</span>
@@ -182,7 +183,7 @@
                             </li>
                             <li><span data-trigger="hover" data-toggle="popover" title="js" data-content="Conteúdos que não tem biblioteca com dependências">js</span>
                                 <ul>
-                                    <li>progress-polyfill.min.js</li>
+                                    <li><span data-trigger="hover" data-toggle="popover" title="Progress Polyfill" data-content="Polyfill para a tag progress em navegadores legados lte9">progress-polyfill.min.js</span></li>
                                 </ul>
                             </li>
                         </ul>
