--- a/base-site/index.html
+++ b/base-site/index.html
@@ -137,7 +137,7 @@
             </div>
         </div>
     </nav>
-    <section id="intro" class="section">
+    <section id="intro" class="section bgWhite">
         <div class="container">
             <div class="row">
                 <article class="col-lg-12">
@@ -245,7 +245,7 @@
             </div>
         </div>
     </section>
-    <section id="pessoas" class="section">
+    <section id="pessoas" class="section bgWhite">
         <div class="container">
             <div class="row">
                 <article class="col-lg-12">
